syntax = "proto3";

package routeguide;

service RouteGuide {
    rpc GetFeature(Point) returns (Feature) {}
    rpc ListFeatures(Rectangle) returns (stream Feature) {}

    rpc RecordLocationImage(stream Image) returns (ImageSize) {}
}

message Point {
    int32 latitude = 1;
    int32 longitude = 2;
}

message Rectangle {
    Point lo = 1;
    Point hi = 2;
}

message Feature {
    string name = 1;
    Point location = 2;
}

message Image {
    bytes data = 1;
}

message ImageSize {
    int32 size = 1;
}
